--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,13 @@
   <artifactId>qlcoder</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>qlcoder</name>
+  <dependencies>
+    <dependency>
+	    <groupId>redis.clients</groupId>
+	    <artifactId>jedis</artifactId>
+	    <version>2.2.0</version>
+	    <type>jar</type>
+	    <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
